# AS_analysis_scripts

./: README.md  environment.yaml  get_groups.rs  main.nf  main_centrifuge.nf  nextflow.config
modules/: basic.nf  map.nf
rust_scripts/get_groups/: Cargo.toml
rust_scripts/get_groups/src/: main.rs
tomls/: human_chr_selection.toml  human_deplete_saur_enrich_4xcontrol.toml
workflows/: map.nf
