[package]
name = "get_groups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
structopt = "0.3"
kseq = "0.5.3"
indicatif = "0.17.8"
fastq = "0.6.0"